--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "foundation": "~5.5.0",
-    "angular-foundation": "~0.5.1"
+    "angular-foundation": "~0.5.1",
+    "angular-ui-router": "~0.2.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
