--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "^1.3.0",
     "foundation": "~5.5.0",
     "angular-foundation": "~0.5.1",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
