--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "foundation": "~5.5.0",
     "angular-foundation": "~0.5.1",
     "angular-ui-router": "~0.2.13",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "foundation-icons": "*",
+    "foundation-icon-fonts": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
