--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "underscore": "~1.7.0",
     "foundation-icons": "*",
     "foundation-icon-fonts": "*",
-    "angular-ui-utils": "bower"
+    "angular-ui-utils": "bower",
+    "echarts": "~2.1.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
