--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,7 @@
     "underscore": "~1.7.0",
     "foundation-icons": "*",
     "foundation-icon-fonts": "*",
-    "angular-ui-utils": "bower",
-    "echarts": "~2.1.10"
+    "angular-ui-utils": "bower"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
