--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "foundation-icons": "*",
     "foundation-icon-fonts": "*",
     "angular-ui-utils": "bower",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "angular-resource": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
