--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
+    "grunt-contrib-compass": "^1.0.4",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.8.1",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -28,11 +28,11 @@
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.31",
+    "karma-chrome-launcher": "~0.1.12",
     "karma-jasmine": "^0.3.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
-    "karma-chrome-launcher": "~0.1.12"
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
